--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -783,8 +783,8 @@ h4.detail-title {
   th.status-field .loading-message-indicator {
     display: none;
   }
-  .bootstrap-table-filter-control-status {
-    opacity: 0;
+  .filterControl * {
+    font-size: 0.9em;
   }
 }
 #adminTableToolbar {
