--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -776,7 +776,7 @@ div.right-panel {
   min-height: 280px;
   transition: all 0.5s ease-in;
   .organization-field {
-    min-width: 130px;
+    min-width: 150px;
   }
   .truenth-id-label {
      display: none;
@@ -814,8 +814,8 @@ div.right-panel {
     opacity: 0.6;
     font-size: 0.85em;
   }
-  .bootstrap-table-filter-control-status {
-    opacity: 0;
+  .filterControl * {
+    font-size: 1em;
   }
 }
 .truenth-id-label {
