use proper access url in invite email

--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -382,6 +382,7 @@
                            rendering time.  insert a placeholder and then
                            replace once the variable is available. -#}
                         body = '{{ invite_email.body.encode("string-escape") | safe }}';
+                        body = body.replace(/url_placeholder/g, decodeURIComponent(return_url));
                         subject = '{{ invite_email.subject }}';
                     };
                 }
