--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -2095,9 +2095,11 @@ sub.pointer:hover {
   position: relative;
   top: -2px;
 }
-.withdrawn-label:before,
-.withdrawn-label::before {
-  content: "Suspend Data Collection and Report Historic Data";
+.withdrawn-label [data-eproms] {
+  display: none;
+}
+.withdrawn-label [data-truenth] {
+  display: inline;
 }
 #profileConsentList {
   font-size: 0.95em;
