--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -2273,9 +2273,11 @@ color: #777
   top:-2px;
 }
 
-.withdrawn-label:before,
-.withdrawn-label::before {
-  content: "Suspend Data Collection and Report Historic Data";
+.withdrawn-label [data-eproms] {
+  display: none;
+}
+.withdrawn-label [data-truenth] {
+  display: inline;
 }
 
 #profileConsentList {
