add button class

--- a/portal/templates/staff_profile_create.html
+++ b/portal/templates/staff_profile_create.html
@@ -74,7 +74,7 @@
                     {{profileSaveBtn()}}
             </div>
             <br/>
-            <div>
+            <div class="back-button-container">
                 {{ back_btn('staff','Staff List')}}
                 <a href="#" style="visibility:hidden" id="profileBackLink"></a>
             </div>
