--- a/portal/templates/sessionReport.html
+++ b/portal/templates/sessionReport.html
@@ -4,7 +4,7 @@
 {% from "profile_macros.html" import profileAssessment %}
 
 <br/>
-<div  id="userSessionReportDetailHeader" class="tnth-headline report-custom-header gradient">
+<div  id="userSessionReportDetailHeader" class="report-custom-header gradient">
 	<span class="left">
 	<h4>{{ _("Assessment Report Detail") }}</h4>
 	<h4 class="text-muted">{{ _("Patient") }} #{{user.id}} - {{user.first_name}}  {{user.last_name}}</h4>
