--- a/portal/templates/staff_by_org.html
+++ b/portal/templates/staff_by_org.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {%- from "flask_user/_macros.html" import footer -%}
 {% block main %}
-<div id="staffList" class="reduce-font-sizes">
+<div id="staffList">
     <br/>
     <h3 class="tnth-headline">{{ _("Staff Administration") }}</h3>
     <br/>
@@ -11,7 +11,7 @@
       <span class="profile-item-title">{{ _("Select a user below to view or update details.") }}</span>
     </div>
     <br/>
-    <div class="admin-table table-responsive smaller-text">
+    <div class="admin-table table-responsive medium-text">
         <div id="adminTableToolbar" class="admin-toolbar"><span id="tableCount"></span></div>
         <table id="adminTable"
                class="table table-striped table-hover table-condensed"
@@ -48,7 +48,7 @@
                   <td>{{ user.first_name if user.first_name }}</td>
                   <td>{{ user.last_name if user.last_name }}</td>
                   <td class="email-data-field">{{ user.email if user.email }}</td>
-                  <td class="org-data-field">{% for org in user.organizations | sort(attribute='id') %}<span class="smaller-text">{{org.name}}</span><br/>{% endfor %}</td>
+                  <td class="org-data-field">{% for org in user.organizations | sort(attribute='id') %}<span class="medium-text">{{org.name}}</span><br/>{% endfor %}</td>
               </tr>
             {% endfor %}
             </tbody>
