--- a/portal/templates/staff_profile_create.html
+++ b/portal/templates/staff_profile_create.html
@@ -4,7 +4,7 @@
 {% from "profile_macros.html" import profileName, profileBirthDate, profileEmail, profilePhone, profileAltPhone, profileSaveBtn, accountCreationScript %}
 {% from "initial_queries_macros.html" import consent_fields %}
 <br/>
-<form id="createProfileForm" class="form tnth-form to-validate">
+<form id="createProfileForm" data-account="staff" class="form tnth-form to-validate">
     <input type="hidden" id="current_user_email" value="{{user.email}}" />
     <div class="row">
         <div class="col-md-11">
@@ -70,16 +70,17 @@
                         });
 
                     });</script>
-                    <br/>
-                    {{profileSaveBtn()}}
+                    <div class="back-button-container">
+                        {{profileSaveBtn()}}
+                    </div>
             </div>
             <br/>
             <div class="back-button-container">
                 {{ back_btn('staff','Staff List')}}
                 <a href="#" style="visibility:hidden" id="profileBackLink"></a>
             </div>
-            </div>
-            </div>
+         </div>
+         </div>
         </div>
     </div>
     <input type="hidden" id="stock_consent_url" value="{{ url_for('portal.stock_consent', org_name='placeholder', _external=True)}}" />
