--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1375,7 +1375,6 @@ div.right-panel {
     padding-top: 2em;
   }
 }
-
 .content-container {
   position: relative;
 }
@@ -1427,7 +1426,7 @@ div.right-panel {
     background-color: @linkHover;
   }
   .profile-item-edit-btn::before {
-    content: "EDIT";
+    content: attr(data-text);
     position: absolute;
     top: 0.5em;
     left: 0;
@@ -1436,7 +1435,7 @@ div.right-panel {
   }
 
   .profile-item-container.edit .profile-item-edit-btn::before {
-    content: "DONE";
+    content: attr(data-text);
   }
 
   .profile-item-container .edit-container {
