--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1416,7 +1416,7 @@ div.right-panel {
     background-color: @linkHover;
   }
   .profile-item-edit-btn::before {
-    content: "EDIT";
+    content: attr(data-text);
     position: absolute;
     top: 0.5em;
     left: 0;
@@ -1425,7 +1425,7 @@ div.right-panel {
   }
 
   .profile-item-container.edit .profile-item-edit-btn::before {
-    content: "DONE";
+    content: attr(data-text);
   }
 
   .profile-item-container .edit-container {
