--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1391,6 +1391,11 @@ div.right-panel {
   overflow: hidden;
   background: @profileBgColor;
 
+  a.open,
+  a.back {
+    display: none
+  }
+
   h4.detail-title {
     display: none;
   }
