--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -295,6 +295,10 @@ select:not([multiple]) {
   overflow: hidden;
   background: rgba(95, 103, 110, 1);
   z-index: -2;
+  a.open,
+  a.back {
+    display: none;
+  }
  .detail-title {
     color: #ebefeb;
     letter-spacing: 1px;
