--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -683,11 +683,15 @@ div.right-panel {
   .eproms-id-label {
     display: none
   }
+  div.filterControl {
+    min-height: 2.5em;
+  }
   div.filterControl select,
   div.filterControl input
   {
     font-weight: normal;
-    min-height: @inputHeight;
+    min-height: 2.3em;
+    height: 2.3em;
   }
   th.status-field {
     position: relative;
