--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -692,10 +692,14 @@ div.right-panel {
 #adminTable .truenth-id-label {
   display: none;
 }
+#adminTable div.filterControl {
+  min-height: 2.5em;
+}
 #adminTable div.filterControl select,
 #adminTable div.filterControl input {
   font-weight: normal;
-  min-height: 2.5em;
+  min-height: 2.3em;
+  height: 2.3em;
   font-size: 0.99em;
 }
 #adminTable th.status-field {
