re-run less, fix button text, move i18next scripts to bottom of template in GIL

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -1515,7 +1515,7 @@ div.right-panel {
   background-color: #576e76;
 }
 #mainDiv.profile .profile-item-edit-btn::before {
-  content: "EDIT";
+  content: attr(data-text);
   position: absolute;
   top: 0.5em;
   left: 0;
@@ -1523,7 +1523,7 @@ div.right-panel {
   right: 0;
 }
 #mainDiv.profile .profile-item-container.edit .profile-item-edit-btn::before {
-  content: "DONE";
+  content: attr(data-text);
 }
 #mainDiv.profile .profile-item-container .edit-container {
   display: none;
