--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -1302,7 +1302,7 @@ div.right-panel {
   background-color: #576e76;
 }
 #mainDiv.profile .profile-item-edit-btn::before {
-  content: "EDIT";
+  content: attr(data-text);
   position: absolute;
   top: 0.5em;
   left: 0;
@@ -1310,7 +1310,7 @@ div.right-panel {
   right: 0;
 }
 #mainDiv.profile .profile-item-container.edit .profile-item-edit-btn::before {
-  content: "DONE";
+  content: attr(data-text);
 }
 #mainDiv.profile .profile-item-container .edit-container {
   display: none;
